--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,18 @@
 {
   "name":"cor/message_highlight",
   "description":"colorize the message index rows based on specific criteria",
-  "license":"GPL-2.0"
+  "license":"GPL-2.0",
+  "homepage":"https://github.com/corbosman/message_highlight",
+  "authors": [
+          {
+              "name": "Cor Bosman",
+              "email": "cor@roundcu.be",
+              "homepage": "http://underwa.ter.net",
+              "role": "Developer"
+          }
+      ],
+  "support": {
+          "email": "cor@roundcu.be",
+          "issues": "https://github.com/corbosman/message_highlight/issues"
+      }
 }
