--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description":"colorize the message index rows based on specific criteria",
   "license":"GPL-2.0",
   "homepage":"https://github.com/corbosman/message_highlight",
+  "type": "roundcube-plugin",
   "authors": [
           {
               "name": "Cor Bosman",
